# kiri

./: .env.example  .gitignore  LICENSE  README.md  Seismic Engagement Center  Seismic Insights  Seismic NewsCenter  Seismic WorkSpace  Seismic WorkSpace (1)  create_neo.py  db.sqlite3-shm  db.sqlite3-wal  gunicorn_config.py  main.py  manage.py  package-lock.json  package.json  pyproject.toml  repro_avatar.py  requirements.txt  static_output.txt  tailwind.config.js  test_output.txt
.github/workflows/: deploy.yml
activity/: models.py  urls.py  utils.py  views.py
activity/migrations/: 0001_initial.py
assets/css/: input.css
core/: admin.py  ai_service.py  forms.py  logging.py  middleware.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_author_delete_announcement.py  0004_alter_comment_content_and_more.py  0005_platform_enhancements.py  0006_add_errorlog.py
core/templatetags/: core_tags.py  markdown_tags.py
discussions/: admin.py  forms.py  models.py  urls.py  views.py
discussions/migrations/: 0001_initial.py  0002_topic_discussions_categor_5afc60_idx_and_more.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  KIRI_STUDIO.md  TRAFFIC_CONTROLLER.md
kiri_project/: apps.py  asgi.py  context_processors.py  middleware.py  settings.py  sitemaps.py  tasks.py  urls.py  wsgi.py
projects/: admin.py  ai_advisor.py  api.py  apps.py  feeds.py  forms.py  gist_service.py  models.py  services.py  tasks.py  tests.py  tests_studio.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py  0002_remove_projectinsight_projects_pr_complex_a37a45_idx_and_more.py  0003_alter_project_options_and_more.py  0004_alter_project_options_alter_project_category_and_more.py  0005_traffic_controller_lanes.py  0006_add_project_insight.py  0007_alter_project_lane.py
publications/: admin.py  api.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
publications/migrations/: 0001_initial.py  0002_initial.py  0003_alter_publication_options_remove_publication_doi_and_more.py  0004_alter_publication_options_and_more.py  0005_publication_view_count.py  0006_remove_publication_bibtex_publication_doi_and_more.py  0007_publication_github_file_path_and_more.py  0008_alter_publication_github_file_path_and_more.py
publications/templatetags/: bibtex_tags.py
static/: manifest.json  serviceworker.js
static/css/: about.css  fonts.css  forms.css  global.css  input.css  output.css  pygments.css  styles.css  tool_base.css
static/js/: about.js  analytics.js  import_landing.js  kiri_studio_core.js  main.js  project_import.js  publication_import.js  pwa_install.js  pyodide_runner.js  studio.js.worker.js  studio.py.worker.js  studio_ai.js  studio_audit.js  studio_collab.js  studio_data_lens.js  studio_magic_bar.js  studio_search.js  studio_test.js  theme.js  (+5 more)
templates/: 404.html  500.html  about.html  base.html  home.html  offline.html  research.html  robots.txt  serviceworker.js
tools/: apps.py  registry.py  tests.py  urls.py  views.py
users/: adapter.py  admin.py  apps.py  encryption.py  forms.py  models.py  tests.py  urls.py  views.py
(+128 files in other folders)
