[project]
name = "kiri"
version = "1.0.0"
description = "Lightweight software for edge intelligence. Projects, tools, and research by Kiri Research Labs."
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.14"
keywords = ["research", "ai", "machine-learning", "edge-intelligence", "tinyml", "django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "django>=6.0.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
    "asgiref>=3.8.1",
    "nh3>=0.3.0",
    "markdown>=3.5.0",
    "pygments>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "projects", "tools", "users", "kiri_project"]
